2005-05-28  Lou Burnard 
	* Source/MS/*.odd Check in changes to MS chapter received from MJD
	after checking that they parse
	
2005-04-22  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/ST/st.odd: remove blank lines making it hard to read

2005-04-21  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/ST/clseg.odd: tei.seg does not need to be predeclared any more

	* Source/TD/vallist.odd: add valList to identifiable, so that it
	can have a "mode" attribute

	* Source/FD/if.odd: PIs no longer needed in content model,
	due to improvements on odd2dtd

	* Source/DS/titlepa.odd: PIs no longer needed in content model,
	due to improvements on odd2dtd; use <group> instead
	
	* Makefile: added database and web targets for dist and install;
	the XQuery scripts have now moved to this directory.

2005-04-09  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/ST/st.odd: remove ref to cbgeseq. does not seem to be
	used, and we cannot have identically-named macros.

	* segmix and segmixxx removed from SA and ST, as mix.seg is not
	used anywhere at all now

2005-03-29  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile (install): add install target to Makefile, which copies
	files to $PREFIX. Use www.tei-c.org/stylesheet for source of XSL for all jobs

2005-03-20  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile: use www.tei-c.org.uk eXist server

2005-03-15  louburnard  <louburnard@spqr-ibm>

	* Source/MS/datable.odd:
	add dateAttrib attribute; rename conjecture attribute value

2005-03-05  louburnard  <louburnard@spqr-ibm>

	* Source/MS/finalrubric.odd, Source/MS/msitemstruct.odd, Source/ST/msitempart.odd:
	Add new components needed to support fully structured msItems in msdescription
