@@ -34,6 +34,11 @@
   </xsl:variable>
   <a href="{$printable}">printable version of this chapter</a>
 -->
+
+<xsl:template match="tei:div0">
+<xsl:message>div 0 <xsl:value-of select="tei:head"/></xsl:message>
+    <xsl:apply-templates/>
+</xsl:template>
   
 
 </xsl:stylesheet>
